--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,10 @@
+@font-face {
+    font-family:'Open Sans';
+    src: url('../../fonts/OpenSans.ttf');
+}
+*{
+    font-family: 'Open Sans', serif;
+}
 .products{
     list-style: none;
     display: grid;
